adding behavior to transfer state between devices by letting the user enter code
